--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -10,28 +10,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      - name: Install emscripten
-        uses: mymindstorm/setup-emsdk@v13
-        with:
-          version: 3.1.56
+    - name: Install emscripten
+      uses: mymindstorm/setup-emsdk@v13
+      with:
+        version: 3.1.56
 
-      - name: Install python + uv
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3 python3-pip
+    - name: Install python + pip
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python3 python3-pip
 
-      - name: Install pygame-ce (web)
-        run: |
-          pip install pygame-ce[web]
+    - name: Install pygame-ce (web)
+      run: |
+        pip install pygame-ce[web]
 
-      - name: Build game wasm
-        run: |
-          python3 -m pygame_ce.web.build game.py --output web
+    - name: Build game wasm
+      run: |
+        python3 -m pygame_ce.web.build game.py --output web
 
-      - name: Upload artifact web
-        uses: actions/upload-artifact@v4
-        with:
-          name: web-build
-          path: web
+    - name: Upload artifact web
+      uses: actions/upload-artifact@v4
+      with:
+        name: web-build
+        path: web
