--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -1,4 +1,4 @@
-name: Build Web (pygame)
+name: Build Web (pygame-ce)
 
 on:
   push:
@@ -22,13 +22,17 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y python3 python3-pip
 
-    - name: Install pygame-web
+    - name: Install pygame-ce (web)
       run: |
-        pip install pygame-web
+        pip install pygame-ce[web]
 
     - name: Build game wasm
       run: |
-        python3 -m pygame_web.build game.py --output web
+        python3 -m pygame_ce.web.build game.py \
+          --output web \
+          --data assets \
+          --audio assets \
+          --release
 
     - name: Upload artifact web
       uses: actions/upload-artifact@v4
