--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -17,16 +17,16 @@ jobs:
       with:
         version: 3.1.56
 
-    - name: Install python + pip
+    - name: Install deps
       run: |
         sudo apt-get update
         sudo apt-get install -y python3 python3-pip
 
-    - name: Install pygame-ce (web)
+    - name: Install pygame-ce
       run: |
         pip install pygame-ce[web]
 
-    - name: Build game wasm
+    - name: Build wasm
       run: |
         python3 -m pygame.web.build game.py \
           --output web \
@@ -34,7 +34,7 @@ jobs:
           --audio assets \
           --release
 
-    - name: Upload artifact web
+    - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: web-build
