--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -1,43 +1,41 @@
-name: Build and Deploy Game to Web
+name: Build Web (pygame-ce)
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
-  build-n-deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - name: Install emscripten
+      uses: mymindstorm/setup-emsdk@v13
+      with:
+        version: 3.1.56
 
-      - name: Install dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          # Instalamos pygame-ce que es el que incluye las herramientas web modernas
-          python3 -m pip install pygame-ce 
+    - name: Install deps
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python3 python3-pip
 
-      - name: Build game wasm
-        run: |
-          # Usamos pygame_ce para el build como indica la herramienta moderna
-          python3 -m pygame_ce.web.build game.py \
-            --output web \
-            --data assets \
-            --audio assets
+    - name: Install pygame-ce
+      run: |
+        pip install pygame-ce[web]
 
-      - name: Upload Artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: 'web'
+    - name: Build wasm
+      run: |
+        python3 -m pygame.web.build game.py \
+          --output web \
+          --data assets \
+          --audio assets \
+          --release
 
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
-        permissions:
-          pages: write
-          id-token: write
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: web-build
+        path: web
