--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -17,18 +17,19 @@ jobs:
       with:
         version: 3.1.56
 
-    - name: Install deps
+    - name: Install python + pip
       run: |
         sudo apt-get update
         sudo apt-get install -y python3 python3-pip
 
-    - name: Install pygame-ce
+    - name: Install pygame-ce web
       run: |
-        pip install pygame-ce[web]
+        pip install --upgrade pip
+        pip install "pygame-ce[web]"
 
     - name: Build wasm
       run: |
-        python3 -m pygame.web.build game.py \
+        python3 -m pygame_ce.web.build game.py \
           --output web \
           --data assets \
           --audio assets \
