--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -1,35 +1,49 @@
-name: Build Web (pygame-ce)
+name: Build and Deploy Web (pygame-ce)
 
 on:
   push:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Install deps
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y python3 python3-pip
+      - name: Install deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3 python3-pip
 
-    - name: Install pygame-ce (web)
-      run: |
-        pip install "pygame-ce[web]==2.5.4"
+      - name: Install pygame-ce (web)
+        run: |
+          pip install "pygame-ce[web]==2.5.4"
 
-    - name: Build wasm
-      run: |
-        python3 -m pygame_ce.web.build game.py \
-          --output web \
-          --data assets \
-          --audio assets \
-          --release
+      - name: Build wasm
+        run: |
+          python3 -m pygame_ce.web.build game.py \
+            --output web \
+            --data assets \
+            --audio assets \
+            --release
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: web-build
-        path: web
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: web  # Aquí es donde se guardó el build según tu comando anterior
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
