--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -15,27 +15,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install deps
+      - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y python3 python3-pip
-
-      - name: Install pygame-ce (web)
-        run: |
+          python -m pip install --upgrade pip
           pip install "pygame-ce[web]==2.5.4"
 
-      - name: Build wasm
+      - name: Build with pygame-ce
         run: |
-          python3 -m pygame_ce.web.build game.py \
-            --output web \
-            --data assets \
-            --audio assets \
-            --release
+          # Este comando asume que game.py y assets están en la raíz
+          python3 -m pygame_ce.web.build game.py --output public --data assets --audio assets --release
 
-      - name: Upload Pages artifact
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: web  # Aquí es donde se guardó el build según tu comando anterior
+          path: public
 
   deploy:
     needs: build
