--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -15,20 +15,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: Install Python and pygame-ce
         run: |
           python -m pip install --upgrade pip
           pip install "pygame-ce[web]==2.5.4"
 
-      - name: Build with pygame-ce
+      - name: Build Web Version
         run: |
-          # Este comando asume que game.py y assets están en la raíz
-          python3 -m pygame_ce.web.build game.py --output public --data assets --audio assets --release
+          # Este comando genera una nueva carpeta 'dist' con todo lo necesario
+          # Usamos --data assets para incluir tus imágenes y sonidos
+          python3 -m pygame_ce.web.build game.py --output dist --data assets --audio assets --release
 
-      - name: Upload artifact
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: public
+          path: dist
 
   deploy:
     needs: build
