--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Web (pygame-ce)
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -10,35 +10,18 @@ permissions:
   id-token: write
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install and Build
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install "pygame-ce[web]==2.5.4"
-          # Ejecutamos el build directamente con el python que tiene instalado el modulo
-          python -m pygame_ce.web.build game.py --output dist --data assets --audio assets --release
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          # Al poner '.' le decimos que publique todo lo que hay en la raiz
+          path: '.'
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
